# p2p_acc

./: CMakeLists.txt  mpiV100.nsys-rep  mpiV100_managed.nsys-rep  test.nsys-rep
src/: test.f90
